..F....... [ZBX-2517] minimum period for time navigator set to 5 minutes; thanks to Zabbix community (Alexei)
A.F....... [ZBXNEXT-1424] implemented value mapping API, added clone button in value map edit form and slightly improved performance of value map caching in frontend (Ivo, Sasha)
...G...... [ZBXNEXT-2960] reduced the default MaxLinesPerSecond value to 20 (Richlv)

Bug fixes:
..F....... [ZBX-9945] fixed updating of "Device uniqueness criterias" while editing discovery checks (Sasha, vitalijs)
...G...... [ZBX-9967] fixed agent compilation error on NetBSD 7 (dimir)
.D........ [ZBX-9347] added information about zabbix_sender input file format to the man page (dimir, Richlv)

--------------------------------------------------------------------------------
Changes for 3.0.0alpha3

New features:
A.FGI..PS. [ZBXNEXT-1263] added encryption support for communications between Zabbix components (Alexei, Andris, asaveljevs, dimir, gleb, Ivo, Oleg, wiper)
..F....... [ZBXNEXT-2662] implemented on-click navigation for sub menus (Alex)
........S. [ZBXNEXT-2844] added multiple escalator support (wiper)
.......PS. [ZBXNEXT-2988] reduced the number of poller configuration cache locks by 1/3 (wiper)
A.F.I...S. [ZBXNEXT-2163] implemented argument support for script media type (Ivo, wiper)
A.F....PS. [ZBXNEXT-2128] implemented execution of an item at a specific time (Ivo, wiper)
..F.....S. [ZBXNEXT-922] added forecasting trigger functions (gleb, Sandis)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Czech, Italian, Japanese and Russian translations; thanks to Zabbix translators (Richlv)
....I..... [ZBXNEXT-2056] added an HTTP response code value map (Richlv)
...G...PS. [ZBX-9274] added printing defaults when Zabbix programs are executed with --help option (dimir)

Bug fixes:
..F....... [ZBXNEXT-2662] fixed debug messages in the dashboard widgets (Sasha)
..F....... [ZBXNEXT-2662] fixed year and month vertical alignment in calendar (Pavel)